# simple_launcher

./: launcher.c  meson.build
.ci/: cross_amd64_arm.txt  cross_amd64_arm64.txt
.github/workflows/: main.yml
